Closed
Bug 1689680
Opened 5 years ago
Closed 5 years ago
Corruption errors when accessing the local storage archive during initialization should be ignored and the archive be wiped
Categories
(Core :: Storage: Quota Manager, defect, P1)
Core
Storage: Quota Manager
Tracking
()
RESOLVED
FIXED
87 Branch
| Tracking | Status | |
|---|---|---|
| firefox87 | --- | fixed |
People
(Reporter: sg, Assigned: sg)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
Errors such as NS_ERROR_FILE_CORRUPTED happen during InitializeLocalStorageArchive and LoadLocalStorageArchiveVersion, e.g.
| Assignee | ||
Updated•5 years ago
|
Severity: -- → S2
Priority: -- → P1
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → sgiesecke
| Assignee | ||
Comment 1•5 years ago
|
||
Relevant stack traces from 86b:
21 52789 dom/quota/ActorsParent.cpp:546 NS_ERROR_FILE_CORRUPTED # Bug 1689680
dom/quota/ActorsParent.cpp:5985 NS_ERROR_FILE_CORRUPTED
dom/quota/ActorsParent.cpp:6208 NS_ERROR_FILE_CORRUPTED
11 12 dom/quota/ActorsParent.cpp:576 # Bug 1689680
9 9 dom/quota/ActorsParent.cpp:546 NS_ERROR_FILE_CORRUPTED # Bug 1689680
7 9 dom/quota/ActorsParent.cpp:546 NS_ERROR_FILE_CORRUPTED # Bug 1689680
dom/quota/ActorsParent.cpp:6200 NS_ERROR_FILE_CORRUPTED
6 9 dom/quota/ActorsParent.cpp:546 NS_ERROR_FILE_CORRUPTED # Bug 1689680
dom/quota/ActorsParent.cpp:5985 NS_ERROR_FILE_CORRUPTED
| Assignee | ||
Comment 2•5 years ago
|
||
| Assignee | ||
Comment 3•5 years ago
|
||
Depends on D104716
| Assignee | ||
Updated•5 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Updated•5 years ago
|
Keywords: leave-open
Pushed by sgiesecke@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4f08e8c00b86
Add StorageDBUpdater::CreateCurrentSchema and call that if we know we have a fresh database file. r=dom-storage-reviewers,janv
| Assignee | ||
Updated•5 years ago
|
Summary: Errors when accessing the local storage archive during initialization should be ignored and the archive be wiped → Corruption errors when accessing the local storage archive during initialization should be ignored and the archive be wiped
Comment 5•5 years ago
|
||
| bugherder | ||
Pushed by sgiesecke@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d5f2a5538e66
Do fallback from existing archive file to webapps store file to empty file more consistently. r=dom-storage-reviewers,ttung
| Assignee | ||
Updated•5 years ago
|
Keywords: leave-open
Comment 7•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox87:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•