Bug 1689680 - Add StorageDBUpdater::CreateCurrentSchema and call that if we know we have a fresh database file. r=dom-storage-reviewers,janv

Differential Revision: https://phabricator.services.mozilla.com/D104716