dom/storage/StorageDBUpdater.h
@@ -12,6 +12,10 @@ namespace dom {
 
 namespace StorageDBUpdater {
 
+// Must only be called on an empty database.
+nsresult CreateCurrentSchema(mozIStorageConnection* aWorkerConnection);
+
+// XXX Rename to MaybeUpdate or EnsureCurrentSchemaVersion.
 nsresult Update(mozIStorageConnection* aWorkerConnection);
 
 }  // namespace StorageDBUpdater
